--- a/src/styles/Bio.scss
+++ b/src/styles/Bio.scss
@@ -1,3 +1,14 @@
+@keyframes scroll {
+  from {
+    transform: translateX(25%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 #bio {
   display: flex;
 
@@ -5,6 +16,7 @@
     width: 640px;
     aspect-ratio: 1;
     object-fit: contain;
+    animation: scroll 1500ms ease-in-out;
   }
 
   #desc {
@@ -13,6 +25,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin: 5rem 0 0 10%;
+    animation: scroll 750ms ease-in-out;
 
     #welcome {
       font-size: 2.5rem;
